[package]
name = "concurrent-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.18"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tokio = { version = "1.14.0", features = ["full"] }
