[package]
name = "stocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tokio = { version = "1.16.1", features = ["full"] }
serde = "*"
serde_json = "*"
serde_derive = "*"
